--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.9",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
