--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.13",
-    "@swimlane/ngx-charts": "^22.0.0",
-    "@types/chart.js": "^2.9.41",
-    "chart.js": "^4.4.9",
+    "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
-    "ng2-charts": "^8.0.0",
+    "gridstack": "^12.3.3",
+    "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
