--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss",
-              "node_modules/gridstack/dist/gridstack.min.css"
+              "node_modules/gridstack/dist/gridstack.min.css",
+               "src/app/animations.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -99,7 +100,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/gridstack/dist/gridstack.min.css"
             ],
             "scripts": []
           }
